// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-stars should be rendered with prop interactive 1`] = `
<div
  className="wrapper"
>
  <div
    className="
            stars
            interactive
            size-m
          "
    data-test="STARS"
    onMouseLeave={[Function]}
  >
    <span
      className="starInteractiveWrapper"
      key="1"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      onMouseOver={[Function]}
      role="button"
      tabIndex={0}
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={1}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="2"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      onMouseOver={[Function]}
      role="button"
      tabIndex={0}
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="3"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      onMouseOver={[Function]}
      role="button"
      tabIndex={0}
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="4"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      onMouseOver={[Function]}
      role="button"
      tabIndex={0}
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="5"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      onMouseOver={[Function]}
      role="button"
      tabIndex={0}
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
  </div>
</div>
`;

exports[`fyndiq-component-stars should be rendered with prop rating 1`] = `
<div
  className="wrapper"
>
  <div
    className="
            stars
            
            size-m
          "
    data-test="STARS"
    onMouseLeave={[Function]}
  >
    <span
      className="starInteractiveWrapper"
      key="1"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={1}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="2"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={1}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="3"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={1}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="4"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={1}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="5"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0.5}
      />
    </span>
  </div>
</div>
`;

exports[`fyndiq-component-stars should be rendered with prop reviews 1`] = `
<div
  className="wrapper"
>
  <div
    className="
            stars
            
            size-m
          "
    data-test="STARS"
    onMouseLeave={[Function]}
  >
    <span
      className="starInteractiveWrapper"
      key="1"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={1}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="2"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="3"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="4"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="5"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
  </div>
  <span
    className="reviews"
  >
    (
    4
     reviews)
  </span>
</div>
`;

exports[`fyndiq-component-stars should be rendered with prop size 1`] = `
<div
  className="wrapper"
>
  <div
    className="
            stars
            
            size-l
          "
    data-test="STARS"
    onMouseLeave={[Function]}
  >
    <span
      className="starInteractiveWrapper"
      key="1"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={1}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="2"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="3"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="4"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="5"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
  </div>
</div>
`;

exports[`fyndiq-component-stars should be rendered without props 1`] = `
<div
  className="wrapper"
>
  <div
    className="
            stars
            
            size-m
          "
    data-test="STARS"
    onMouseLeave={[Function]}
  >
    <span
      className="starInteractiveWrapper"
      key="1"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={1}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="2"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="3"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="4"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
    <span
      className="starInteractiveWrapper"
      key="5"
    >
      <Star
        className=""
        color="#FFD600"
        colorEmpty="#CCD1DD"
        full={0}
      />
    </span>
  </div>
</div>
`;
